--- a/Project_Research/.obsidian/workspace
+++ b/Project_Research/.obsidian/workspace
@@ -10,7 +10,7 @@
           "type": "markdown",
           "state": {
             "file": "Research notes.md",
-            "mode": "preview"
+            "mode": "source"
           }
         }
       }
