--- a/Project_Research/.obsidian/workspace
+++ b/Project_Research/.obsidian/workspace
@@ -9,8 +9,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Research notes.md",
-            "mode": "source"
+            "file": "Interface Research.md",
+            "mode": "preview"
           }
         }
       }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Research notes.md",
+                "file": "Interface Research.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,6 +88,7 @@
   },
   "active": "f9182e9c462d9375",
   "lastOpenFiles": [
+    "Interface Research.md",
     "Research notes.md",
     "Research plans.md",
     "hello.md"
