Account class added, input validation

--- a/COMP09044_CW_PasswordManager/build-COMP09044_CW_PasswordManager-Desktop-Debug/Makefile
+++ b/COMP09044_CW_PasswordManager/build-COMP09044_CW_PasswordManager-Desktop-Debug/Makefile
@@ -52,11 +52,13 @@ OBJECTS_DIR   = ./
 
 ####### Files
 
-SOURCES       = ../COMP09044_CW_PasswordManager/main.cpp \
+SOURCES       = ../COMP09044_CW_PasswordManager/account.cpp \
+		../COMP09044_CW_PasswordManager/main.cpp \
 		../COMP09044_CW_PasswordManager/mainwindow.cpp \
 		../COMP09044_CW_PasswordManager/password.cpp \
 		../COMP09044_CW_PasswordManager/unittest.cpp moc_mainwindow.cpp
-OBJECTS       = main.o \
+OBJECTS       = account.o \
+		main.o \
 		mainwindow.o \
 		password.o \
 		unittest.o \
@@ -140,9 +142,11 @@ DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/exceptions.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/yacc.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/lex.prf \
-		../COMP09044_CW_PasswordManager/COMP09044_CW_PasswordManager.pro ../COMP09044_CW_PasswordManager/mainwindow.h \
+		../COMP09044_CW_PasswordManager/COMP09044_CW_PasswordManager.pro ../COMP09044_CW_PasswordManager/account.h \
+		../COMP09044_CW_PasswordManager/mainwindow.h \
 		../COMP09044_CW_PasswordManager/password.h \
-		../COMP09044_CW_PasswordManager/unittest.h ../COMP09044_CW_PasswordManager/main.cpp \
+		../COMP09044_CW_PasswordManager/unittest.h ../COMP09044_CW_PasswordManager/account.cpp \
+		../COMP09044_CW_PasswordManager/main.cpp \
 		../COMP09044_CW_PasswordManager/mainwindow.cpp \
 		../COMP09044_CW_PasswordManager/password.cpp \
 		../COMP09044_CW_PasswordManager/unittest.cpp
@@ -333,8 +337,8 @@ distdir: FORCE
 	@test -d $(DISTDIR) || mkdir -p $(DISTDIR)
 	$(COPY_FILE) --parents $(DIST) $(DISTDIR)/
 	$(COPY_FILE) --parents /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/data/dummy.cpp $(DISTDIR)/
-	$(COPY_FILE) --parents ../COMP09044_CW_PasswordManager/mainwindow.h ../COMP09044_CW_PasswordManager/password.h ../COMP09044_CW_PasswordManager/unittest.h $(DISTDIR)/
-	$(COPY_FILE) --parents ../COMP09044_CW_PasswordManager/main.cpp ../COMP09044_CW_PasswordManager/mainwindow.cpp ../COMP09044_CW_PasswordManager/password.cpp ../COMP09044_CW_PasswordManager/unittest.cpp $(DISTDIR)/
+	$(COPY_FILE) --parents ../COMP09044_CW_PasswordManager/account.h ../COMP09044_CW_PasswordManager/mainwindow.h ../COMP09044_CW_PasswordManager/password.h ../COMP09044_CW_PasswordManager/unittest.h $(DISTDIR)/
+	$(COPY_FILE) --parents ../COMP09044_CW_PasswordManager/account.cpp ../COMP09044_CW_PasswordManager/main.cpp ../COMP09044_CW_PasswordManager/mainwindow.cpp ../COMP09044_CW_PasswordManager/password.cpp ../COMP09044_CW_PasswordManager/unittest.cpp $(DISTDIR)/
 	$(COPY_FILE) --parents ../COMP09044_CW_PasswordManager/mainwindow.ui $(DISTDIR)/
 
 
@@ -396,9 +400,13 @@ compiler_clean: compiler_moc_predefs_clean compiler_moc_header_clean compiler_ui
 
 ####### Compile
 
+account.o: ../COMP09044_CW_PasswordManager/account.cpp ../COMP09044_CW_PasswordManager/account.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o account.o ../COMP09044_CW_PasswordManager/account.cpp
+
 main.o: ../COMP09044_CW_PasswordManager/main.cpp ../COMP09044_CW_PasswordManager/mainwindow.h \
 		../COMP09044_CW_PasswordManager/unittest.h \
-		../COMP09044_CW_PasswordManager/password.h
+		../COMP09044_CW_PasswordManager/password.h \
+		../COMP09044_CW_PasswordManager/account.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o main.o ../COMP09044_CW_PasswordManager/main.cpp
 
 mainwindow.o: ../COMP09044_CW_PasswordManager/mainwindow.cpp ../COMP09044_CW_PasswordManager/mainwindow.h \
@@ -409,7 +417,8 @@ password.o: ../COMP09044_CW_PasswordManager/password.cpp ../COMP09044_CW_Passwor
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o password.o ../COMP09044_CW_PasswordManager/password.cpp
 
 unittest.o: ../COMP09044_CW_PasswordManager/unittest.cpp ../COMP09044_CW_PasswordManager/unittest.h \
-		../COMP09044_CW_PasswordManager/password.h
+		../COMP09044_CW_PasswordManager/password.h \
+		../COMP09044_CW_PasswordManager/account.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o unittest.o ../COMP09044_CW_PasswordManager/unittest.cpp
 
 moc_mainwindow.o: moc_mainwindow.cpp 
