--- a/COMP09044_CW_PasswordManager/build-COMP09044_CW_PasswordManager-Desktop-Debug/Makefile
+++ b/COMP09044_CW_PasswordManager/build-COMP09044_CW_PasswordManager-Desktop-Debug/Makefile
@@ -147,6 +147,7 @@ DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/lex.prf \
 		../COMP09044_CW_PasswordManager/COMP09044_CW_PasswordManager.pro ../COMP09044_CW_PasswordManager/account.h \
 		../COMP09044_CW_PasswordManager/datahandler.h \
+		../COMP09044_CW_PasswordManager/hashtable.h \
 		../COMP09044_CW_PasswordManager/mainwindow.h \
 		../COMP09044_CW_PasswordManager/password.h \
 		../COMP09044_CW_PasswordManager/unittest.h ../COMP09044_CW_PasswordManager/account.cpp \
@@ -344,7 +345,7 @@ distdir: FORCE
 	@test -d $(DISTDIR) || mkdir -p $(DISTDIR)
 	$(COPY_FILE) --parents $(DIST) $(DISTDIR)/
 	$(COPY_FILE) --parents /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/data/dummy.cpp $(DISTDIR)/
-	$(COPY_FILE) --parents ../COMP09044_CW_PasswordManager/account.h ../COMP09044_CW_PasswordManager/datahandler.h ../COMP09044_CW_PasswordManager/mainwindow.h ../COMP09044_CW_PasswordManager/password.h ../COMP09044_CW_PasswordManager/unittest.h $(DISTDIR)/
+	$(COPY_FILE) --parents ../COMP09044_CW_PasswordManager/account.h ../COMP09044_CW_PasswordManager/datahandler.h ../COMP09044_CW_PasswordManager/hashtable.h ../COMP09044_CW_PasswordManager/mainwindow.h ../COMP09044_CW_PasswordManager/password.h ../COMP09044_CW_PasswordManager/unittest.h $(DISTDIR)/
 	$(COPY_FILE) --parents ../COMP09044_CW_PasswordManager/account.cpp ../COMP09044_CW_PasswordManager/datahandler.cpp ../COMP09044_CW_PasswordManager/main.cpp ../COMP09044_CW_PasswordManager/mainwindow.cpp ../COMP09044_CW_PasswordManager/password.cpp ../COMP09044_CW_PasswordManager/unittest.cpp $(DISTDIR)/
 	$(COPY_FILE) --parents ../COMP09044_CW_PasswordManager/mainwindow.ui $(DISTDIR)/
 
@@ -418,7 +419,8 @@ main.o: ../COMP09044_CW_PasswordManager/main.cpp ../COMP09044_CW_PasswordManager
 		../COMP09044_CW_PasswordManager/unittest.h \
 		../COMP09044_CW_PasswordManager/password.h \
 		../COMP09044_CW_PasswordManager/account.h \
-		../COMP09044_CW_PasswordManager/datahandler.h
+		../COMP09044_CW_PasswordManager/datahandler.h \
+		../COMP09044_CW_PasswordManager/hashtable.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o main.o ../COMP09044_CW_PasswordManager/main.cpp
 
 mainwindow.o: ../COMP09044_CW_PasswordManager/mainwindow.cpp ../COMP09044_CW_PasswordManager/mainwindow.h \
@@ -431,7 +433,8 @@ password.o: ../COMP09044_CW_PasswordManager/password.cpp ../COMP09044_CW_Passwor
 unittest.o: ../COMP09044_CW_PasswordManager/unittest.cpp ../COMP09044_CW_PasswordManager/unittest.h \
 		../COMP09044_CW_PasswordManager/password.h \
 		../COMP09044_CW_PasswordManager/account.h \
-		../COMP09044_CW_PasswordManager/datahandler.h
+		../COMP09044_CW_PasswordManager/datahandler.h \
+		../COMP09044_CW_PasswordManager/hashtable.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o unittest.o ../COMP09044_CW_PasswordManager/unittest.cpp
 
 moc_mainwindow.o: moc_mainwindow.cpp 
