--- a/COMP09044_CW_PasswordManager/build-COMP09044_CW_PasswordManager-Desktop-Debug/Makefile
+++ b/COMP09044_CW_PasswordManager/build-COMP09044_CW_PasswordManager-Desktop-Debug/Makefile
@@ -403,11 +403,18 @@ moc_mainwindow.cpp: ../COMP09044_CW_PasswordManager/mainwindow.h \
 		../COMP09044_CW_PasswordManager/datahandler.h \
 		../COMP09044_CW_PasswordManager/hashtable.h \
 		../COMP09044_CW_PasswordManager/newaccount.h \
+		../COMP09044_CW_PasswordManager/password.h \
 		moc_predefs.h \
 		/usr/lib/qt5/bin/moc
 	/usr/lib/qt5/bin/moc $(DEFINES) --include '/mnt/15f210d7-aa4f-4ea8-a4b3-2bd52aeba8fc/Programming/Uni/Algorithms & Collections/PROJECT/COMP09044_CW_PasswordManager/build-COMP09044_CW_PasswordManager-Desktop-Debug/moc_predefs.h' -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I'/mnt/15f210d7-aa4f-4ea8-a4b3-2bd52aeba8fc/Programming/Uni/Algorithms & Collections/PROJECT/COMP09044_CW_PasswordManager/COMP09044_CW_PasswordManager' -I/usr/include/x86_64-linux-gnu/qt5/Qca-qt5/QtCrypto -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtSql -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I. -I/usr/include/c++/10 -I/usr/include/x86_64-linux-gnu/c++/10 -I/usr/include/c++/10/backward -I/usr/lib/gcc/x86_64-linux-gnu/10/include -I/usr/local/include -I/usr/include/x86_64-linux-gnu -I/usr/include ../COMP09044_CW_PasswordManager/mainwindow.h -o moc_mainwindow.cpp
 
 moc_newaccount.cpp: ../COMP09044_CW_PasswordManager/newaccount.h \
+		../COMP09044_CW_PasswordManager/password.h \
+		../COMP09044_CW_PasswordManager/inputvalexcept.h \
+		../COMP09044_CW_PasswordManager/account.h \
+		../COMP09044_CW_PasswordManager/datahandler.h \
+		../COMP09044_CW_PasswordManager/hashtable.h \
+		../COMP09044_CW_PasswordManager/accountdirectory.h \
 		moc_predefs.h \
 		/usr/lib/qt5/bin/moc
 	/usr/lib/qt5/bin/moc $(DEFINES) --include '/mnt/15f210d7-aa4f-4ea8-a4b3-2bd52aeba8fc/Programming/Uni/Algorithms & Collections/PROJECT/COMP09044_CW_PasswordManager/build-COMP09044_CW_PasswordManager-Desktop-Debug/moc_predefs.h' -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I'/mnt/15f210d7-aa4f-4ea8-a4b3-2bd52aeba8fc/Programming/Uni/Algorithms & Collections/PROJECT/COMP09044_CW_PasswordManager/COMP09044_CW_PasswordManager' -I/usr/include/x86_64-linux-gnu/qt5/Qca-qt5/QtCrypto -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtSql -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I. -I/usr/include/c++/10 -I/usr/include/x86_64-linux-gnu/c++/10 -I/usr/include/c++/10/backward -I/usr/lib/gcc/x86_64-linux-gnu/10/include -I/usr/local/include -I/usr/include/x86_64-linux-gnu -I/usr/include ../COMP09044_CW_PasswordManager/newaccount.h -o moc_newaccount.cpp
@@ -464,8 +471,8 @@ main.o: ../COMP09044_CW_PasswordManager/main.cpp ../COMP09044_CW_PasswordManager
 		../COMP09044_CW_PasswordManager/datahandler.h \
 		../COMP09044_CW_PasswordManager/hashtable.h \
 		../COMP09044_CW_PasswordManager/newaccount.h \
-		../COMP09044_CW_PasswordManager/unittest.h \
-		../COMP09044_CW_PasswordManager/password.h
+		../COMP09044_CW_PasswordManager/password.h \
+		../COMP09044_CW_PasswordManager/unittest.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o main.o ../COMP09044_CW_PasswordManager/main.cpp
 
 mainwindow.o: ../COMP09044_CW_PasswordManager/mainwindow.cpp ../COMP09044_CW_PasswordManager/mainwindow.h \
@@ -475,20 +482,28 @@ mainwindow.o: ../COMP09044_CW_PasswordManager/mainwindow.cpp ../COMP09044_CW_Pas
 		../COMP09044_CW_PasswordManager/datahandler.h \
 		../COMP09044_CW_PasswordManager/hashtable.h \
 		../COMP09044_CW_PasswordManager/newaccount.h \
+		../COMP09044_CW_PasswordManager/password.h \
 		ui_mainwindow.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o mainwindow.o ../COMP09044_CW_PasswordManager/mainwindow.cpp
 
 newaccount.o: ../COMP09044_CW_PasswordManager/newaccount.cpp ../COMP09044_CW_PasswordManager/newaccount.h \
+		../COMP09044_CW_PasswordManager/password.h \
+		../COMP09044_CW_PasswordManager/inputvalexcept.h \
+		../COMP09044_CW_PasswordManager/account.h \
+		../COMP09044_CW_PasswordManager/datahandler.h \
+		../COMP09044_CW_PasswordManager/hashtable.h \
+		../COMP09044_CW_PasswordManager/accountdirectory.h \
 		ui_newaccount.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o newaccount.o ../COMP09044_CW_PasswordManager/newaccount.cpp
 
-password.o: ../COMP09044_CW_PasswordManager/password.cpp ../COMP09044_CW_PasswordManager/password.h
+password.o: ../COMP09044_CW_PasswordManager/password.cpp ../COMP09044_CW_PasswordManager/password.h \
+		../COMP09044_CW_PasswordManager/inputvalexcept.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o password.o ../COMP09044_CW_PasswordManager/password.cpp
 
 unittest.o: ../COMP09044_CW_PasswordManager/unittest.cpp ../COMP09044_CW_PasswordManager/unittest.h \
 		../COMP09044_CW_PasswordManager/password.h \
-		../COMP09044_CW_PasswordManager/account.h \
 		../COMP09044_CW_PasswordManager/inputvalexcept.h \
+		../COMP09044_CW_PasswordManager/account.h \
 		../COMP09044_CW_PasswordManager/accountdirectory.h \
 		../COMP09044_CW_PasswordManager/datahandler.h \
 		../COMP09044_CW_PasswordManager/hashtable.h
